Add network throtting as parameter
