# pkg/api/models.go
@@ -27,14 +27,16 @@ func CreateMongoClient(mongoURI string) {
 }
 
 type ReportRequest struct {
-	URL        string `json:"url" example:"https://www.google.com"`
-	FormFactor string `json:"form_factor" example:"desktop"`
+	URL            string `json:"url" example:"https://www.google.com"`
+	FormFactor     string `json:"form_factor" example:"desktop"`
+	ThroughputKbps int64  `json:"throughput_kbps" example:"50000"`
 }
 
 type Report struct {
 	ID               primitive.ObjectID     `json:"id" bson:"_id"`
 	URL              string                 `json:"url" bson:"url"`
 	FormFactor       string                 `json:"form_factor" bson:"form_factor" example:"desktop"`
+	ThroughputKbps   int64                  `json:"throughput_kbps" example:"50000"`
 	RawJSON          string                 `json:"raw_json" bson:"-"`
 	CreatedAt        time.Time              `json:"created_at" bson:"created_at"`
 	PerformanceScore float32                `json:"performance_score" bson:"performance_score"`
